<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_me"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:src="@drawable/img_romy"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_me"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/nama" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:id="@+id/tv_email"
      android:layout_below="@+id/tv_name"
      android:layout_marginTop="10dp"
      android:layout_centerHorizontal="true"
      android:textSize="20sp"
      android:text="@string/email"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_contact_me"
        android:layout_below="@+id/tv_email"
        android:layout_centerHorizontal="true"
        android:text="@string/contact"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/teal_700"
        android:textStyle="bold"
        android:padding="10dp"/>


  </RelativeLayout>
</ScrollView>